Sculpt Mode: brush shortcut keys don't work when a tool other than the brushes is active #70211

Closed
opened 2019-09-24 18:56:00 +02:00 by Metin Seven · 7 comments

System Information
Operating system: Windows 10 Pro 64-bit
Graphics card: NVIDIA GeForce RTX 2080 Ti

Blender Version
Blender 2.81 Alpha, September 23, 23:12:42 - 5a6ab6f594

Short description of error
In Sculpt Mode, when a tool other than the brushes is active (Mesh Filter, Transform / Move / Scale / Rotate, etc.), shortcut keys to activate a brush don't work anymore. You need to select a brush from the Tool menu to activate a brush.

Exact steps for others to reproduce the error

  1. Control + N ➔ New File ➔ Sculpting.
  2. Activate a transform mode (Transform / Move / Scale / Rotate).
  3. Now press a brush keyboard shortcut, like 'C' for the Clay brush, 'X' for Draw, 'G' for Grab, or Shift + C for Crease.
  4. No brush is activated and you remain stuck in the current mode.
  5. To activate a brush you need to click a Tool menu button, which is cumbersome.

I guess this is not a bug, but I do think it is unnecessary behaviour that slows down workflow. Would love to see it tackled.

Thanks.

**System Information** Operating system: Windows 10 Pro 64-bit Graphics card: NVIDIA GeForce RTX 2080 Ti **Blender Version** Blender 2.81 Alpha, September 23, 23:12:42 - 5a6ab6f59468 **Short description of error** In Sculpt Mode, when a tool other than the brushes is active (Mesh Filter, Transform / Move / Scale / Rotate, etc.), shortcut keys to activate a brush don't work anymore. You need to select a brush from the Tool menu to activate a brush. **Exact steps for others to reproduce the error** 1. Control + N ➔ New File ➔ Sculpting. 1. Activate a transform mode (Transform / Move / Scale / Rotate). 1. Now press a brush keyboard shortcut, like 'C' for the Clay brush, 'X' for Draw, 'G' for Grab, or Shift + C for Crease. 1. No brush is activated and you remain stuck in the current mode. 1. To activate a brush you need to click a Tool menu button, which is cumbersome. I guess this is not a bug, but I do think it is unnecessary behaviour that slows down workflow. Would love to see it tackled. Thanks.
Author

Added subscriber: @MetinSeven-1

Added subscriber: @MetinSeven-1

#70153 was marked as duplicate of this issue

#70153 was marked as duplicate of this issue

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii
Campbell Barton was assigned by Germano Cavalcante 2019-09-27 19:04:46 +02:00

@ideasman42, this seems to be a problem in the overall tool system.

@ideasman42, this seems to be a problem in the overall tool system.

Added subscribers: @Maged_Afra, @brecht, @PabloDobarro

Added subscribers: @Maged_Afra, @brecht, @PabloDobarro

This issue was referenced by 47da01a4db

This issue was referenced by 47da01a4db1dcedcaaae1ba22626f340cb90a530

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70211
No description provided.