Fix T70211: Brush keybindings failed with non-brush tool active