source/blender/windowmanager/intern/wm_toolsystem.c
@@ -633,7 +633,7 @@ static void toolsystem_refresh_screen_from_active_tool(Main *bmain,
   }
 }
 
-bToolRef *WM_toolsystem_ref_set_by_id(
+bToolRef *WM_toolsystem_ref_set_by_id_ex(
     bContext *C, WorkSpace *workspace, const bToolKey *tkey, const char *name, bool cycle)
 {
   wmOperatorType *ot = WM_operatortype_find("WM_OT_tool_set_by_id", false);
@@ -663,13 +663,25 @@ bToolRef *WM_toolsystem_ref_set_by_id(
   return (tref && STREQ(tref->idname, name)) ? tref : NULL;
 }
 
+bToolRef *WM_toolsystem_ref_set_by_id(bContext *C, const char *name)
+{
+  ViewLayer *view_layer = CTX_data_view_layer(C);
+  ScrArea *sa = CTX_wm_area(C);
+  bToolKey tkey;
+  if (WM_toolsystem_key_from_context(view_layer, sa, &tkey)) {
+    WorkSpace *workspace = CTX_wm_workspace(C);
+    return WM_toolsystem_ref_set_by_id_ex(C, workspace, &tkey, name, false);
+  }
+  return NULL;
+}
+
 static void toolsystem_reinit_with_toolref(bContext *C, WorkSpace *workspace, bToolRef *tref)
 {
   bToolKey tkey = {
       .space_type = tref->space_type,
       .mode = tref->mode,
   };
-  WM_toolsystem_ref_set_by_id(C, workspace, &tkey, tref->idname, false);
+  WM_toolsystem_ref_set_by_id_ex(C, workspace, &tkey, tref->idname, false);
 }
 
 static const char *toolsystem_default_tool(const bToolKey *tkey)
